# PodAgent-OS

./: .env.example  .gitignore  pyproject.toml
PodAgent OS/: CLAUDE.md  architect.md  architecture.md  prd.md  researcher.md  reviewer.md  spec-writer.md
PodAgent OS/docs/: research-multi-track-alignment.md  research-p0.md
PodAgent OS/specs/: module-editing.md  module-ingestion.md  module-mastering.md  module-mixing.md  prd.md
src/podagent/: __init__.py  __main__.py
src/podagent/cli/: __init__.py  gate_cmd.py  init_cmd.py  main.py  run_cmd.py  status_cmd.py
src/podagent/editing/: __init__.py  chapters.py  edl_builder.py  filler.py  module.py  show_notes.py  silence.py  structure.py  tangent.py
src/podagent/ingestion/: __init__.py  align.py  context_extract.py  diarize.py  merge.py  module.py  transcribe.py  validate.py
src/podagent/mastering/: __init__.py  cover_art.py  encode.py  loudness.py  metadata.py  module.py  package.py  show_notes.py  verify.py
src/podagent/mixing/: __init__.py  crossfade.py  ducking.py  extract.py  mixdown.py  module.py  music_bed.py  processing.py  timeline.py
src/podagent/mixing/providers/: __init__.py  auphonic.py  base.py  dolby.py  ffmpeg_nr.py
src/podagent/models/: __init__.py  alignment.py  config.py  context.py  edl.py  manifest.py  transcript.py
src/podagent/pipeline/: __init__.py  gate.py  orchestrator.py
src/podagent/utils/: __init__.py  ffmpeg.py  ffprobe.py  io.py  progress.py  retry.py
